# Accountancy

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  Accountancy_en_US.ts  Accountancy_fr_FR.ts  CMakeLists.txt  Doxyfile  README.md  Resources.qrc
.github/workflows/: cmake.yml  linux_release.yml  macOS_release.yml  windows_release.yml
data/caisse_epargne/: new_format.csv  telechargement2.csv
resources/icons/: accountancy.icns  icons_source.txt
scripts/: build_macos.sh
src/: Accountancy.pro  Accountancy_en_US.ts  Accountancy_fr_FR.ts  CMakeLists.txt  ImportDialogInDb.ui  Resources.qrc  account.h  account.hpp  accountfilter.cpp  accountfilter.hpp  accountmodel.cpp  accountmodel.hpp  accounttablewidget.cpp  accounttablewidget.h  accounttablewidget.ui  bankmodel.cpp  bankmodel.hpp  card.cpp  card.hpp  checkbook.cpp  checkbook.h  controller.cpp  controller.hpp  csvreader.cpp  csvreader.hpp  currency.cpp  currency.h  currencymodel.cpp  currencymodel.hpp  databasemodel.cpp  databasemodel.h  databasemodel.hpp  dbmanager.cpp  dbmanager.hpp  dbtablewidget.cpp  financialinstitutionmodel.cpp  financialinstitutionmodel.hpp  loanaccount.hpp  main.cpp  maindockwidget.cpp  (+15 more)
src/controller/: CMakeLists.txt  controller.cpp  controller.hpp
src/core/: CMakeLists.txt  account.cpp  account.hpp  accountfilter.cpp  accountfilter.hpp  accountmodel.cpp  accountmodel.hpp  bank.cpp  bank.hpp  card.cpp  card.hpp  category.cpp  category.hpp  categorymodel.cpp  categorymodel.hpp  checkbook.cpp  checkbook.hpp  controller.cpp  controller.hpp  currency.cpp  currency.hpp  currencymodel.cpp  currencymodel.hpp  datafileinterface.hpp  financialinstitution.cpp  financialinstitution.hpp  financialinstitutionmodel.cpp  financialinstitutionmodel.hpp  importconfig.cpp  importconfig.hpp  importconfigmodel.cpp  importconfigmodel.hpp  loanaccount.cpp  loanaccount.hpp  model.cpp  model.hpp  owner.cpp  owner.hpp  ownermodel.cpp  ownermodel.hpp  (+8 more)
src/core/Interfaces/: idatafileinterface.hpp  iserializable.hpp
src/data_loader/: CMakeLists.txt  dbmanager.cpp  dbmanager.hpp
src/model/: CMakeLists.txt  abstractmodel.cpp  abstractmodel.hpp  accountmodel.cpp  accountmodel.hpp  categorymodel.cpp  categorymodel.hpp  categorymodelfilter.cpp  categorymodelfilter.hpp  currencymodel.cpp  currencymodel.hpp  financialinstitutionmodel.cpp  financialinstitutionmodel.hpp  importconfigmodel.cpp  importconfigmodel.hpp  model.cpp  model.hpp  ownermodel.cpp  ownermodel.hpp  transactionmodel.cpp  transactionmodel.hpp  treemodel.cpp  treemodel.hpp
src/sql_models/: currencymodel.cpp  databasemodel.cpp  databasemodel.hpp  ownermodel.cpp  ownermodel.hpp
src/tests/: CMakeLists.txt  tst_account.cpp  tst_currency.cpp  tst_dataimport.cpp  tst_financialinstitution.cpp  tst_owner.cpp  tst_transaction.cpp
src/ui/: CMakeLists.txt  addaccountdialog.cpp  addaccountdialog.hpp  addaccountdialog.ui  addownerdialog.cpp  addownerdialog.hpp  addownerdialog.ui  categoriesdialog.cpp  categoriesdialog.hpp  categoriesdialog.ui  categoriestreedialog.cpp  categoriestreedialog.hpp  categoriestreedialog.ui  comboboxitemdelegate.cpp  comboboxitemdelegate.hpp  contextualmenugenerator.cpp  contextualmenugenerator.hpp  createcategorydialog.cpp  createcategorydialog.hpp  createcategorydialog.ui  createcurrencydialog.cpp  createcurrencydialog.hpp  createcurrencydialog.ui  createinstitutiondialog.cpp  createinstitutiondialog.hpp  createinstitutiondialog.ui  currenciesdialog.cpp  currenciesdialog.hpp  currenciesdialog.ui  dbtablewidget.cpp  dbtablewidget.hpp  dbtablewidget.ui  importdatadialog.cpp  importdatadialog.hpp  importdatadialog.ui  institutionsdialog.cpp  institutionsdialog.hpp  institutionsdialog.ui  mainwindow.cpp  mainwindow.hpp  (+10 more)
src/utils/: CMakeLists.txt  call_once.hpp  instrumentor.hpp  scopedtimer.hpp  singleton.hpp  timer.hpp
tests/: CMakeLists.txt  main.cpp  tst_account.cpp  tst_currency.cpp  tst_dataimport.cpp  tst_financialinstitution.cpp  tst_owner.cpp  tst_transaction.cpp
tests/core/: CMakeLists.txt  tst_account.cpp  tst_category.cpp  tst_currency.cpp  tst_dataimport.cpp  tst_financialinstitution.cpp  tst_import_config.cpp  tst_owner.cpp  tst_subcategory.cpp  tst_transaction.cpp
tests/data/caisse_epargne/: new_format_date2.csv  old_format.csv
tests/data/hello_bank/: HB_03_10_2022.csv
